Bug 1534026 - Add a wrapping prop to NotificationBox and use it from Console. r=nchevobbe.
This prop will add a classname in the NotificationBox element, that we then style to make the text wrap

Differential Revision: https://phabricator.services.mozilla.com/D23455

UltraBlame original commit: f656ee3960b076fa59b559b32169efd764b2cf7a

--- a/devtools/client/shared/components/NotificationBox.css
+++ b/devtools/client/shared/components/NotificationBox.css
@@ -92,3 +92,7 @@
 .notificationbox .messageCloseButton:active {
   background-color: rgba(170, 170, 170, .4); 
 }
+
+.notificationbox.wrapping .notificationInner .messageText {
+  white-space: normal;
+}
